Descripción de los cambios

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <!-- Introducción de la página Soluciones -->
     <section class="intro">
       <h1>Soluciones</h1>
-      <p>En OpenBox Innova integramos hardware, software y servicios para que la tecnología llegue donde más se necesita. Descubre nuestras soluciones diseñadas para educación, gobierno, empresas y comunidades.</p>
+      <p>Holaaaa En OpenBox Innova integramos hardware, software y servicios para que la tecnología llegue donde más se necesita. Descubre nuestras soluciones diseñadas para educación, gobierno, empresas y comunidades.</p>
     </section>
 
     <!-- Solución 1: Carros para portátiles -->
